src/test/deca/context/valid/provided/IfThenElseComplete.deca
// DESCRIPTION : IfThenElse complete
{
    int a = 1;
    int b = 1;
    boolean bool = true;
    if ((a==b) || false) {
        print("(ツ)");
    } else if ( !(a!=b) && !bool) {
        print("(ツ) (ツ)");
    }
    else {
        print("(ツ) (ツ) (ツ)");
    }
}
